Fixing all button alignment

--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -37,7 +37,7 @@
   .is-shown {
     background-color: #ffffff;
     border-radius: 8px;
-    height: 148px;
+    height: 160px;
     position: relative;
     transition: height 2.3s ease-in;
     transition-delay: -2s;
