--- a/src/pages/Utilitys/UtilityElectricityWater/Khanepani/Khanepani.scss
+++ b/src/pages/Utilitys/UtilityElectricityWater/Khanepani/Khanepani.scss
@@ -30,15 +30,15 @@
   }
 
   .Khanepani-button-property {
-    float: inline;
     display: flex;
-    margin-top: 255px;
-    .clear-button-for-Khanepani {
-      width: 70%;
-    }
-    .procced-button-for-Khanepani {
-      margin-left: 10%;
-      width: 70%;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    right: 0;
+    ion-button {
+      width: 120px;
     }
   }
 }
