--- a/src/pages/Utilitys/UtilityElectricityWater/NepalElectricity/NepalElectricity.scss
+++ b/src/pages/Utilitys/UtilityElectricityWater/NepalElectricity/NepalElectricity.scss
@@ -27,15 +27,15 @@
   }
 
   .electricity-proceed-button {
-    float: inline;
     display: flex;
-    margin-top: 235px;
-    .clear-button-for-electricity {
-      width: 70%;
-    }
-    .procced-button-for-electricity {
-      margin-left: 10%;
-      width: 70%;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    right: 0;
+    ion-button {
+      width: 120px;
     }
   }
 }
