--- a/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
+++ b/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
@@ -19,21 +19,15 @@
     margin-top: 70px;
 
     .royalitySavingButton {
-      margin-top: 45px;
       display: flex;
-      .btn-elem {
-        width: 100%;
-        font-size: 14px;
-        font-weight: 500;
-        font-family: "Montserrat";
-      }
-      .royalitySavingClear-button {
-        float: left;
-        width: 40%;
-      }
-      .royalitySaving-submit {
-        margin-left: 26%;
-        width: 40%;
+      justify-content: space-around;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      right: 0;
+      ion-button {
+        width: 120px;
       }
     }
   }
